--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravelcollective/html": "^5.4",
         "mmerian/phpcrawl": "dev-master",
         "spipu/html2pdf": "^5.0",
-        "symfony/browser-kit": "^3.3"
+        "symfony/browser-kit": "^3.3",
+        "ixudra/curl": "6.*"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
